[gd_scene load_steps=5 format=3 uid="uid://dm2boapqtnnuq"]

[ext_resource type="Script" path="res://pause_menu.gd" id="1_jsnry"]

[sub_resource type="SystemFont" id="SystemFont_sy7s8"]
font_names = PackedStringArray("Droid Sans")
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_am3o2"]
font = SubResource("SystemFont_sy7s8")
font_size = 40
outline_size = 15
outline_color = Color(0, 0, 0, 1)
shadow_size = 11
shadow_color = Color(0, 0, 0, 0.360784)
shadow_offset = Vector2(5.13, 2.395)

[sub_resource type="SystemFont" id="SystemFont_7eiy2"]
font_names = PackedStringArray("Droid Sans")
font_weight = 750
subpixel_positioning = 0

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jsnry")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.266575, 0.266575, 0.266575, 0.784314)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 120
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 120

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 23
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_constants/separation = 45

[node name="Pause Title" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Game Paused"
label_settings = SubResource("LabelSettings_am3o2")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_constants/separation = 30

[node name="Resume" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_7eiy2")
theme_override_font_sizes/font_size = 31
text = "Resume"

[node name="Restart Level" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_7eiy2")
theme_override_font_sizes/font_size = 31
text = "Restart Level"

[node name="Quit to Menu" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_7eiy2")
theme_override_font_sizes/font_size = 31
text = "Quit to Title"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer/Restart Level" to="." method="_on_restart_level_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer/Quit to Menu" to="." method="_on_quit_to_menu_pressed"]
